syntax = "proto3";

package onight.zjfae.afront.gens;

option java_outer_classname="CheckSmsValidateCodeWithInnerMobile";
//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_smsValidateCode_checkSmsValidateCodeWithInnerMobile{



}

message Ret_PBIFE_smsValidateCode_checkSmsValidateCodeWithInnerMobile{

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_smsValidateCode_checkSmsValidateCodeWithInnerMobile data=3;

}

message REQ_PBIFE_smsValidateCode_checkSmsValidateCodeWithInnerMobile{

	string smsValidateCode = 1; //,短信验证码,String,不校验,否,

	string smsValidateCodeType = 2; //,短信验证码类型,String,不校验,否,
}