syntax = "proto3";

package onight.zjfae.afront.gens;

option java_outer_classname="SMSTransferRateLowSendValidateCode";

//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_smsValidateCode_transferRateLowSendValidateCode{



}

message Ret_PBIFE_smsValidateCode_transferRateLowSendValidateCode{

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_smsValidateCode_transferRateLowSendValidateCode data=3;

}

message REQ_PBIFE_smsValidateCode_transferRateLowSendValidateCode{

	string productName = 1; //,产品名称,String,不校验,否,

	string abandonEstimateProfit = 2; //,舍弃收益,String,不校验,否,
}